# Disco

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  README.md
docker/: Dockerfile
include/: rift.h
samples/: class.rift  class.shark  class.tidal  hello.rift  hello.tidal
scripts/: Setup.ps1
shake/: README.md
sources/: Config.hpp.in
sources/Cadet.Core/: Cadet.Core.csproj
sources/Cadet.Core.Runtime/: CadetRuntime.cs
sources/Icebear.Core/: Icebear.Core.csproj
sources/Icebear.Core.Runtime/: IcebearRuntime.cs
sources/compiler/: compiler.cpp
sources/modules/: .gitkeep
sources/vm/: .gitkeep  CMakeLists.txt  chunk.c  chunk.h  common.h  core.h  opcodes.h  rift_alloc.c  rift_alloc.h  rift_value_stack.c  rift_value_stack.h  table.h  value.h
tests/pscbench/denytaskmgr/: main.cadet  policyconf.cadet
tests/samples/: taskmgr.icebear
